[project]
name = "cameraauditor"
version = "0.1.0"
description = "Auditoria de dados públicos da Câmara de Vereadores (scraper + ETL + dashboard)"
requires-python = ">=3.10"

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.ruff]
line-length = 100
select = ["E","F","I","UP","B"]
ignore = []
